# fractals_rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  coloring_schemes.md  escape_time_fractals.md
.circleci/: config.yml
.github/workflows/: rust.yml  test.yml
proptest-regressions/fractals/: color_scheme.txt  gray.txt
scripts/: all_mandelbrot.sh  batch.sh
src/: main.rs
src/fractals/: burning_ship.rs  color_scheme.rs  escape_time.rs  gray.rs  image.rs  job.rs  julia.rs  mandelbrot.rs  mod.rs  parser.rs  random.rs  size.rs  warp_pov.rs
src/fractals/color_scheme/: gray.rs  mod.rs  random.rs  warp_pov.rs
