[package]
name = "fractals"
version = "0.1.0"
authors = ["Jeremy D. Frens <jfrens@thecitybase.com>"]
edition = "2018"

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
num-complex = "0.4"
image = "0.24"
lazy_static = "1.4"
regex = "1.2"
yaml-rust = { version = "0.9", package = "yaml-rust2" }

[dev-dependencies]
proptest = "1.1"
assert-eq-float = "0.1"
